Fixed the Code review comments.